# MasterVaultPublic

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  mastervault.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
datasets/: README.md
datasets/larkstead/: README.md
datasets/larkstead/bible/: company.yaml  corpus-plan.yaml  manifest.yaml  style-rules.md
datasets/larkstead/bible/doc-templates/: bug-report.md  call-transcript.md  case-study.md  chat-log.md  checklist.md  competitor-note.md  compliance-note.md  contract.md  csat.md  email-thread.md  faq.md  finance-rule.md  hr-policy.md  integration-guide.md  invoice.md  lead-note.md  macro.md  meeting-notes.md  memo.md  objection-note.md  policy.md  postmortem.md  pricing-one-pager.md  process.md  project.md  proposal.md  receiving-log.md  release-notes.md  segment-analysis.md  sop.md  ticket.md  troubleshooting.md
datasets/larkstead/bible/storylines/: SL1-alder-mat-defect.yaml  SL2-refund-window-change.yaml  SL3-cobalt-dental-deal.yaml  SL4-halo-firmware-flicker.yaml  SL5-parcelpoint-cutover.yaml
datasets/larkstead/embeddings/: manifest.json
datasets/larkstead/golden/: README.md  ask_baseline.json  ask_cases.yaml  baseline.json  queries.yaml  resolved.yaml
datasets/larkstead/processed/: MANIFEST.md
datasets/larkstead/processed/_review/pending/: lint-2026-07-07-1258-rv-0060.md  lint-2026-07-07-1258-rv-0106.md  lint-2026-07-07-1258-rv-0107.md  lint-2026-07-07-1258-rv-0108.md
datasets/larkstead/processed/customer-support/decisions/: 2026-01-12-extend-refund-window.md  2026-01-15-raise-free-shipping-threshold.md
datasets/larkstead/processed/customer-support/sources/: chat-log-chat-ana-priya-refund-batch-hold.md  chat-log-chat-celeste-jonah-wis01-macro-question.md  chat-log-chat-hank-dmitri-cascadia-dock-schedule.md  chat-log-chat-jonah-priya-shift-handoff-gift-order.md  chat-log-chat-mara-holiday-coverage-schedule.md  chat-log-chat-priya-dmitri-mat-curl-pattern.md  chat-log-chat-ray-priya-wa-tax-rounding.md  chat-log-chat-sofia-priya-drizzle-wismo-warning.md  chat-log-chat-tom-priya-b2b-escalation-etiquette.md  chat-log-vireo-flicker-escalation-chat.md  csat-batch-csat-2024-q3-61200-jonah-followthrough.md  csat-batch-csat-2024-q4-61209-holiday-slowdown.md  csat-batch-csat-2025-01-61218-priya-showroom.md  csat-batch-csat-2025-04-61227-celeste-policy-links.md  csat-batch-csat-2025-07-61236-replacement-parts.md  csat-batch-csat-2025-08-61245-11hr-response.md  csat-batch-csat-2025-10-61254-summit-physio-b2b.md  csat-batch-csat-2025-12-61263-gift-order-mixups.md  faq-sl2-faq-returns.md  (+103 more)
datasets/larkstead/qa/: mechanical_check.py
docs/: ARCHITECTURE.md  DATASET.md  README.md
migrations/: README.md
migrations/pg/: 001_init.sql
scripts/: check-package.sh  record-demo.sh
src/mastervault/: README.md  __init__.py  config.py  models.py
src/mastervault/cli/: README.md  admin.py  app.py  ask.py  demo.py  evals.py  ingest.py  lint.py  query.py  review.py  runs.py
src/mastervault/contracts/: README.md  __init__.py  base.py  claims.py  contradiction.py  corpus_check.py  judge.py  synthesis.py  wiki_draft.py
src/mastervault/core/: README.md  __init__.py  budget.py  errors.py  events.py  paths.py  runctx.py
src/mastervault/evals/: README.md  __init__.py  ask_harness.py  faithfulness.py  harness.py  metrics.py
src/mastervault/ingest/: README.md  __init__.py  affects.py  concept_match.py  convert.py  corpus_check.py  extract.py  linker.py  validate.py  wiki_draft.py
src/mastervault/pipelines/: README.md  __init__.py  ask.py  ingest.py  lint.py
src/mastervault/prompts/: README.md  __init__.py  registry.py  untrusted.py
src/mastervault/prompts/claim_extraction/: v1.md
src/mastervault/prompts/contradiction_judge/: v1.md
src/mastervault/prompts/corpus_check/: v1.md
src/mastervault/prompts/grounded_synthesis/: v1.md
src/mastervault/prompts/sufficiency_judge/: v1.md
src/mastervault/prompts/wiki_draft/: v1.md
src/mastervault/providers/: README.md  __init__.py  embedding.py  llm.py  prices.py  reranker.py
src/mastervault/retrieval/: README.md  __init__.py  channels.py  fuse.py  mmr.py  search.py
src/mastervault/review/: README.md  __init__.py  apply.py  queue.py
src/mastervault/storage/: README.md  __init__.py  base.py  postgres.py  sqlite.py
src/mastervault/sync/: README.md  __init__.py  indexer.py  load.py
src/mastervault/vaultfs/: README.md  __init__.py  frontmatter.py  notes.py  segmenter.py  walker.py
tests/: README.md  conftest.py
tests/fixtures/raw_docs/: faq-refund-policy.md  policy-loyalty-rewards.md  sop-restock-checklist.txt  ticket-shipping-delay-1042.txt
tests/integration/: test_ask.py  test_ask_eval.py  test_dataset_integrity.py  test_demo_lifecycle.py  test_demo_load.py  test_eval.py  test_ingest_e2e.py  test_search.py  test_storage_backends.py  test_sync.py
tests/unit/contracts/: test_claims_contract.py  test_registry.py
tests/unit/core/: test_budget.py  test_events.py  test_runctx.py
tests/unit/evals/: conftest.py  test_ask_harness.py  test_faithfulness.py  test_harness.py  test_metrics.py
tests/unit/ingest_affects/: test_reconcile_affects.py
tests/unit/ingest_validate/: conftest.py  test_validate_cli.py  test_validate_gate.py
tests/unit/pipelines/: conftest.py  test_ask_pipeline.py  test_ingest.py  test_lint.py  test_route_claim.py
tests/unit/providers/: conftest.py  provider_doubles.py  test_provider_embedding.py  test_provider_llm.py  test_provider_prices.py  test_provider_reranker.py
tests/unit/retrieval/: test_alias_frontdoor.py  test_fuse.py  test_mmr.py
tests/unit/review/: conftest.py  test_apply.py  test_cli_review.py  test_queue.py
tests/unit/security/: test_boundaries.py
tests/unit/storage/: test_storage_unit.py
tests/unit/vaultfs/: conftest.py  test_frontmatter.py  test_notes.py  test_segmenter.py  test_walker.py
(+668 files in other folders)
