[project]
name = "mastervault"
version = "0.1.0"
description = "Internal-OS agentic RAG for small businesses: Markdown-canonical knowledge vault with a PostgreSQL+pgvector index, hybrid retrieval, and an agentic ingestion/ask pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "pypdf>=4.2",
    "anthropic>=0.40",
    "openai>=1.50",
    "jinja2>=3.1",
]

[project.optional-dependencies]
local = [
    "fastembed>=0.3",
    # onnxruntime stopped shipping x86_64 macOS wheels after 1.20
    "onnxruntime<1.20; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
rerank = ["cohere>=5.5"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
mvault = "mastervault.cli.app:main"
vault = "mastervault.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mastervault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs a storage backend (sqlite always; postgres when DATABASE_URL is reachable)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
