[project]
name = "mastervault"
version = "0.2.0"
description = "Internal-OS agentic RAG for small businesses: Markdown-canonical knowledge vault with a PostgreSQL+pgvector index, hybrid retrieval, and an agentic ingestion/ask pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrii Artemenko", email = "andrii.art.design@gmail.com" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "hybrid-search",
    "vector-search",
    "knowledge-base",
    "llm",
    "pgvector",
    "sqlite-vec",
    "citations",
    "agentic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "pypdf>=4.2",
    "anthropic>=0.40",
    "openai>=1.50",
    "jinja2>=3.1",
    # local embeddings are the keyless default path, so they ship in core
    "fastembed>=0.3",
    # onnxruntime stopped shipping x86_64 macOS wheels after 1.20
    "onnxruntime<1.20; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
rerank = ["cohere>=5.5"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
mvault = "mastervault.cli.app:main"
vault = "mastervault.cli.app:main"

[project.urls]
Homepage = "https://github.com/AndriiArtemenko3/MasterVaultPublic"
Repository = "https://github.com/AndriiArtemenko3/MasterVaultPublic"
Documentation = "https://github.com/AndriiArtemenko3/MasterVaultPublic/blob/main/docs/ARCHITECTURE.md"
Changelog = "https://github.com/AndriiArtemenko3/MasterVaultPublic/blob/main/CHANGELOG.md"
Issues = "https://github.com/AndriiArtemenko3/MasterVaultPublic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mastervault"]

# The sdist carries what is needed to build AND test the package, and nothing
# else. `raw/` and `bible/` are the corpus-*generation* inputs -- the source
# documents and the story bible the Larkstead corpus was written from. Nothing
# at build, install or test time reads them, so they are repository history,
# not distribution content. `processed/`, `embeddings/`, `golden/` and `qa/`
# stay: the integration tests and both eval gates read them, and an sdist whose
# own test suite cannot run is not much of a source distribution.
[tool.hatch.build.targets.sdist]
exclude = [
  "datasets/larkstead/raw",
  "datasets/larkstead/bible",
  # developer workspaces, caches, and test output
  "vault_workspace",
  "_build",
  "dist",
  ".venv",
  ".coverage",
  "coverage.xml",
  "htmlcov",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  "**/__pycache__",
  ".env",
  "*.key",
  "*.log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs a storage backend (sqlite always; postgres when DATABASE_URL is reachable)",
]

[tool.coverage.run]
source = ["src/mastervault"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",  # Protocol method bodies
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

# The load-bearing contracts -- storage backends, retrieval, the external
# provider boundaries, and the pipelines -- are additionally held to fully
# annotated signatures. The CLI and dataset-shaped helpers stay on the baseline
# above rather than growing annotations that buy nothing.
[[tool.mypy.overrides]]
module = [
    "mastervault.storage.*",
    "mastervault.retrieval.*",
    "mastervault.providers.*",
    "mastervault.pipelines.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
